README, yarn production, mongo fix env

--- a/src/frontend/src/app/hotel-stars/hotel-stars.component.html
+++ b/src/frontend/src/app/hotel-stars/hotel-stars.component.html
@@ -1,15 +1,15 @@
 <div id="stars-component">
     <p>
-        <label for="starsField">
-            <input id="starsField" type="radio" value="0" class="radic" name="starsField" #starsField1
-                   (keyup)="select(starsField1.value)" [formControl]="starsField"/>
+        <label for="radioStarsField0">
+            <input id="radioStarsField0" type="radio" value="0" class="radic" name="radioStarsField" #radioStarsField0
+                   (keyup)="select(radioStarsField0.value)" [formControl]="radioStarsField"/>
             <strong>Todas las estrellas</strong>
         </label>
     </p>
     <p>
-        <label for="starsField1">
-            <input id="starsField1" type="radio" value="5" name="starsField" #starsField1
-                   (keyup)="select(starsField1.value)" [formControl]="starsField"/>
+        <label for="radioStarsField1">
+            <input id="radioStarsField1" type="radio" value="5" name="radioStarsField" #radioStarsField1
+                   (keyup)="select(radioStarsField1.value)" [formControl]="radioStarsField"/>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
@@ -18,9 +18,9 @@
         </label>
     </p>
     <p>
-        <label for="starsField2">
-            <input id="starsField2" type="radio" value="4" name="starsField" #starsField2
-                   (keyup)="select(starsField2.value)" [formControl]="starsField"/>
+        <label for="radioStarsField2">
+            <input id="radioStarsField2" type="radio" value="4" name="radioStarsField" #radioStarsField2
+                   (keyup)="select(radioStarsField2.value)" [formControl]="radioStarsField"/>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
@@ -28,26 +28,26 @@
         </label>
     </p>
     <p>
-        <label for="starsField3">
-            <input id="starsField3" type="radio" value="3" name="starsField" #starsField3
-                   (keyup)="select(starsField3.value)" [formControl]="starsField"/>
+        <label for="radioStarsField3">
+            <input id="radioStarsField3" type="radio" value="3" name="radioStarsField" #radioStarsField3
+                   (keyup)="select(radioStarsField3.value)" [formControl]="radioStarsField"/>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
         </label>
     </p>
     <p>
-        <label for="starsField4">
-            <input id="starsField4" type="radio" value="2" name="starsField" #starsField4
-                   (keyup)="select(starsField4.value)" [formControl]="starsField"/>
+        <label for="radioStarsField4">
+            <input id="radioStarsField4" type="radio" value="2" name="radioStarsField" #radioStarsField4
+                   (keyup)="select(radioStarsField4.value)" [formControl]="radioStarsField"/>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
         </label>
     </p>
     <p>
-        <label for="starsField5">
-            <input id="starsField5" type="radio" value="1" name="starsField" #starsField5
-                   (keyup)="select(starsField5.value)" [formControl]="starsField"/>
+        <label for="radioStarsField5">
+            <input id="radioStarsField5" type="radio" value="1" name="radioStarsField" #radioStarsField5
+                   (keyup)="select(radioStarsField5.value)" [formControl]="radioStarsField"/>
             <div class="stars" aria-label="star" [inlineSVG]="'icons/filters/star.svg'"></div>
         </label>
     </p>
